# NewZeaLiDAR

./: .env-example  .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  environment.yml  pyproject.toml  run.py
configs/: instructions.json  kaikoura.geojson  logging.json  nz_mainland.geojson  pipeline_laz.json  pipeline_xyz.json
newzealidar/: __init__.py  catchments.py  datasets.py  datasets_waikato.py  lidar.py  lidar_waikato.py  logs.py  process.py  rivers.py  tables.py  utils.py  version.py
notebooks/: dataset.ipynb
scripts/: datum_lvd_nzvd2016.py  datum_nzvd2009_nzvd2016.py
src/: __init__.py  catchments.py  datasets.py  datasets_waikato.py  lidar.py  lidar_waikato.py  logs.py  process.py  tables.py  utils.py  version.py
tests/: CatchmentsTests.py  DatasetsTests.py  DatasetsWaikatoTests.py  EndToEndTests.py  LidarTests.py  LidarWaikatoTests.py  ProcessTests.py  __init__.py
