[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "newzealidar"
version = "0.1"
description = "A package for creating high-resolution DEM derived from LiDAR datasets of New Zealand."
readme = "README.md"
authors = [{ name = "Xander Cai", email = "xandcai@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["NewZeaLiDAR", "DEM", "Hydrologically conditioned", "LiDAR"]
dependencies = [
    "dask",
    "bokeh!=3.0.*,>=2.4.2",
    "gdal",
    "pdal",
    "geopandas",
    "geojson",
    "pygeos",
    "shapely>=2.0",
    "rasterio",
    "rioxarray",
    "netcdf4",
    "scrapy",
    "twisted<23.0",
    "psycopg2",
    "sqlalchemy<2.0",
    "geoalchemy2",
    "laspy",
    "geoapis",
    "geofabrics<=0.10.23",
    'tomli; python_version >= "3.11"',
]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["newzealidar"]

[project.optional-dependencies]
dev = ["black", "python-dotenv", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/xandercai/NewZeaLiDAR"
Documentation = "https://xandercai.github.io/NewZeaLiDAR/"
